# rusty_trace

./: .gitignore  Cargo.toml  README.md
editor/: Cargo.toml
editor/src/: lib.rs  main.rs
editor/src/gui/: guielements.rs  image_storage.rs  logger.rs  mod.rs
editor/src/gui/views/: cameras_editor.rs  image_view.rs  mod.rs  object_editor.rs  texture_editor.rs
ray/: Cargo.toml
ray/src/: lib.rs  vec_repo.rs
ray/src/render/: camera.rs  scene.rs  texture.rs
ray/src/render/hittable/: mod.rs  modifiers.rs
src/: camera.rs  generics.rs  gui.rs  hittable.rs  io.rs  lib.rs  main.rs  material.rs  oidn.rs  ray.rs  renderer.rs  repo.rs  resource_manager.rs  scene.rs  shapes.rs  texture.rs  vec_repo.rs
src/gui/: guielements.rs  image_storage.rs  mod.rs
src/gui/views/: cameras_editor.rs  image_view.rs  mod.rs  object_editor.rs  preview.rs  texture_editor.rs
src/imgui_gui/: mod.rs
src/imgui_gui/support/: mod.rs
src/render/: camera.rs  material.rs  mod.rs  repo.rs  scene.rs  texture.rs
src/render/hittable/: mod.rs  modifiers.rs  plane.rs  rect.rs  sphere.rs
