[package]
name = "rusty_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
image = { version = "0.24.5", features = ["jpeg", "png"] }
egui = "0.21.0"
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
rfd = "0.11.3"
fastrand = "1.9.0"
enum_dispatch = "0.3.11"
libloading = "0.8"
anyhow = "1.0.70"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
rmp-serde = "1.1.1"
