[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ray = { path = "../ray/" }
image = { version = "0.24.5", features = ["jpeg", "png"] }
egui = "0.21.0"
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
rfd = "0.11.3"
anyhow = "1.0.70"
lazy_static = "1.4.0"
rmp-serde = "1.1.1"
miniz_oxide = "0.7.1"
